--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.docker.compose.lifecycle-management=start_only
 server.error.include-stacktrace=never
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+spring.security.user.name=user
+spring.security.user.password=password
+server.servlet.session.timeout=15m
+
 
