--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,10 @@
             <version>2.8.6</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.graphql</groupId>
+            <artifactId>spring-graphql</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
