--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,15 @@ spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
 server.servlet.session.timeout=10m
 
+# Configure .env and Oauth login
 spring.config.import=file:.env[.properties]
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+
+spring.security.enabled=false
+
+# Enable GraphiQL interface
+spring.graphql.graphiql.enabled=true
 
 
 
